Fixing a few issues: * Colorpicker track/pointer overlap * Last child of layer face styling * Adding a little more width to the properties panel

--- a/src/style/color-picker.less
+++ b/src/style/color-picker.less
@@ -138,8 +138,7 @@
     position: absolute;
     left: 1em;
     right: 1em;
-    top: 82%;
-    height: 10%;
+    top: 87%;
 
     .color-picker-slider__horizontal > .color-picker-slider__track {
         background: linear-gradient(to left,
@@ -178,8 +177,7 @@
     position: absolute;
     left: 1em;
     right: 1em;
-    top: 88%;
-    height: 10%;
+    top: 92%;
 
     .color-picker-slider__horizontal > .color-picker-slider__track,
     .color-picker-slider__vertical > .color-picker-slider__track {
