--- a/src/style/components.less
+++ b/src/style/components.less
@@ -191,11 +191,12 @@ header h2 {
   width: 1.667rem;
   height: 1.667rem;
   padding: 0;
-  margin: .5rem 0;
+  margin: .5rem .4rem;
 }
 
 #header-alignment {
   align-items: baseline;
+
 }
 
 
