--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -1,4 +1,4 @@
-@properties-width:20.33rem;
+@properties-width:21.33rem;
 @toolbar-width:3rem;
 
 /* -- MASTER CONTAINER -- */
@@ -28,7 +28,7 @@
 
 #header-alignment {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 
