--- a/src/style/style.less
+++ b/src/style/style.less
@@ -135,7 +135,7 @@ header.sub-header {
 .sub-header h3 {
   text-transform: uppercase;
   opacity: .8;
-
+  font-size: 1.08rem;
 }
 
 .sub-header > div {
@@ -169,9 +169,8 @@ header.sub-header {
 /* -- TRANSFORM -- */
 
 header h2 {
-
-  font-size: 1.15rem;
-
+  font-size: 1.08rem;
+  letter-spacing: .2rem;
 }
 
 .documentNext,
